=====================================
   m l U n i t   C H A N G E L O G
=====================================

mlUnit 1.9.5 (in development)
-----------------------------

  - Compatibility with MATLAB R2022a.
  - Offer initial rerun help for default action.
  - Give a warning when a test function has the same name as a directory.

  - Fix: When calling a test function on the MATLAB console, and a
    directory of the same name exists, no tests actually execute.


mlUnit 1.9.4 (2021-09-17)
-------------------------

  - Compatibility with MATLAB R2021a.
  - Linux compatibility of mlUnit internal test suites.
  - Don't execute suite_set_up and suite_tear_down, when a test suite
    contains no tests. Either because no test_* functions exist, or
    because all test_* functions were disabled.


mlUnit 1.9.3 (2021-01-25)
-------------------------

  - Support UNIX/Linux execution of build.xml Ant scripts.
  - Allow disabling all of a suite's test cases when using disable_tests.
  - mlunit_rerun allows replay of the most recent suite run (triggered
    by calling run_suite_collection or recursive_test_run). Replaying the
    latest fails and/or errors, allows you to concentrate on them,
    quickly fix them and verify your fix.
  - mlunit_single run only a single test out of a function test suite.
  - Default 'catch_output' to false, so that manual test runs display
    test output by default. Otherwise, testers will overlook problems
    in the test setup, when they manifest as output, not as error.
    Ant build.xml execution still defaults to 'catch_output' of true,
    so that automation logs are clean and capture output in the jUnit XML.

  - Fix: Tests skipped during set_up don't tell the call stack any more.
  - Fix: Proper encoding in jUnit reports. Always UTF-8.
  - Fix: When adding a directory to the MATLAB search path, that is
    a descendant of a mlunit_tempdir controlled directory, mlUnit does
    not trigger a MATLAB warning anymore.